--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
     --light-white: #ccc;
     --light-bg: #f5f5f5;
     --dark-bg: rgba(0, 0, 0,.7);
-    --border: .1 rem solid #aaa;
+    --border: .1rem solid #aaa;
     --box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
 }
 
@@ -52,6 +52,21 @@ section {
     padding: 5rem 10%;
 }
 
+.heading {
+    text-align: center;
+    margin-bottom: 3rem;
+}
+
+.heading span {
+    font-size: 2.5rem;
+    color: var(--primary);
+}
+
+.header h3 {
+    font-size: 4.5rem;
+    color: var(--black);
+}
+
 .btn {
     margin-top: 1rem;
     display: inline-block;
@@ -59,7 +74,7 @@ section {
     color: var(--white);
     font-size: 2rem;
     cursor: pointer;
-    padding: 1rem, 2rem;
+    padding: 1rem, 3rem;
 }
 
 .btn:hover {
@@ -109,8 +124,16 @@ section {
     display: none;
 }
 
+@keyframes fadeIn {
+    0%{
+        transform: translateY(-1rem) scale(0);
+        opacity: 0;
+    }
+}
+
 .home {
     padding: 0;
+    background: var(--black);
 }
 
 .home .slide {
@@ -138,6 +161,7 @@ section {
 .home .slide .content {
     text-align: center;
     width: 70rem;
+    display: none;
 }
 
 .home .slide .content span {
@@ -145,6 +169,7 @@ section {
     display: block;
     padding-bottom: .5rem;
     color: var(--light-white);
+    animation: fadeIn 0.4s cubic-bezier(.54,1.3,.63,1.34) .2s backwards;
 }
 
 .home .slide .content h3 {
@@ -154,8 +179,16 @@ section {
     text-shadow: 0 .5rem 1rem rgba(0,0,0,.7);
     line-height: 1;
     padding: 2rem 0;
+    animation: fadeIn 0.4s cubic-bezier(.54,1.3,.63,1.34) .4s backwards;
 } 
 
+.home .slide .content .btn {
+    animation: fadeIn 0.4s cubic-bezier(.54,1.3,.63,1.34) .6s backwards;
+}
+
+.home .swiper-slide-active .content {
+    display: inline-block;
+}
 .swiper-button-next, .swiper-button-prev {
     height: 5rem;
     width: 5rem;
@@ -175,15 +208,179 @@ section {
     font-size: 2rem;
 }
 
+.about {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 2rem;
+}
 
+.about .image {
+    flex: 1 1 41rem;
+}
 
+.about .image img {
+    width: 100%;
+}
 
+.about .content {
+    flex: 1 1 41rem;
+}
 
+.about .content .title {
+    font-size: 4rem;
+    color: var(--black);
+}
 
+.about .content p {
+   font-size: 1.7rem;
+   color: var(--light-black);
+   padding: 1rem 0;
+   line-height: 2;
+}
 
+.about .content .icons-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+    margin-top: 3rem;
+}
 
+.about .content .icons-container .icons {
+    flex: 1 1 16rem;
+    text-align: center;
+    background: var(--light-bg);
+    padding: 3rem 2rem;
+}
 
+.about .content .icons-container .icons img {
+    height: 5rem;
+}
 
+.about .content .icons-container .icons h3 {
+  padding-top: 1rem;
+  font-size: 2rem;
+  color: var(--light-black);
+  font-weight: normal;
+}
+
+.food {
+    background: var(--light-bg);
+}
+
+.food .slide {
+    text-align: center;
+    padding: 4rem 2rem;
+    border-radius: 5rem;
+    transform: scale(.9);
+    opacity: .5;
+    margin-bottom:4rem;
+    cursor: pointer;
+}
+
+.swiper-pagination-bullet-active {
+    background: var(--primary);
+}
+
+.swiper-horizontal>.swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal {
+    bottom: 0;
+}
+
+.food .swiper-slide-active{
+    transform: scale(1);
+    opacity: 1;
+    background: var(--white);
+    box-shadow: var(--box-shadow);
+    border: var(--border);
+}
+
+.food .slide img {
+    height: 25rem;
+    margin-bottom: 1rem;
+}
+
+.food .slide h3 {
+    font-size: 2.5rem;
+    padding: 1rem 0;
+    color: var(--black);
+}
+
+.food .slide .price {
+    font-size: 2.5rem;
+    color: var(--primary);
+}
+
+.food-preview-container {
+    background: var(--dark-bg);
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 1100;
+    display: none;
+    align-items: center;
+    justify-content: center;
+}
+
+.food-preview-container .food-preview {
+    text-align: center;
+    background: var(--white);
+    padding: 3rem 2rem;
+    border-radius: .5rem;
+    display: none;
+    width: 35rem;
+}
+
+.food-preview-container .food-preview.active {
+    display: inline-block;
+}
+
+.food-preview-container .food-preview img {
+    height: 25rem;
+    margin-bottom: 1rem;
+}
+
+.food-preview-container .food-preview h3 {
+    padding: 1rem 0;
+    font-size: 2.5rem;
+    color: var(--black);
+}
+
+.food-preview-container .food-preview .stars {
+    margin-top: .5rem;
+}
+
+.food-preview-container .food-preview .stars i {
+    font-size: 1.7rem;
+    color: var(--primary);
+}
+
+.food-preview-container .food-preview p {
+    font-size: 1.6rem;
+    color: var(--light-black);
+    padding: 1rem 0;
+    line-height: 2;
+}
+
+.food-preview-container .food-preview .price {
+    font-size: 2.5rem;
+    color: var(--black);
+    margin-bottom: .5rem;
+}
+
+#close-preview {
+    position: absolute;
+    top: 1.5rem;
+    right: 2.5rem;
+    font-size: 6rem;
+    cursor: pointer;
+    color: var(--white);
+}
+
+#close-preview:hover {
+    transform: rotate(90deg);
+}
 
 
 
@@ -239,10 +436,19 @@ section {
     display: block;
     margin: 2rem;
  }
+
+ .swiper-button-next,
+ .swiper-button-prev {
+    top: initial;
+    bottom: 1rem;
+ }
 }
 
 @media (max-width:450px) {
     html {
         font-size: 50%;
+    }
+    .home .slide .content h3 {
+        font-size: 7rem;
     }
 }
