--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@
 }
 
 html{
-    font-size: 62.5%;
+    font-size:62.5%;
     overflow-x: hidden;
     scroll-behavior: smooth;
     scroll-padding-top: 6rem;
@@ -334,6 +334,7 @@ section {
 
 .food-preview-container .food-preview.active {
     display: inline-block;
+    animation: fadeIn 0.4s cubic-bezier(.54,1.3,.63,1.34) backwards;
 }
 
 .food-preview-container .food-preview img {
@@ -382,10 +383,318 @@ section {
     transform: rotate(90deg);
 }
 
+.gallery .gallery-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    gap: 2rem;
+}
+
+.gallery .gallery-container .box {
+    height: 40rem;
+    position: relative;
+    overflow: hidden;
+}
+
+.gallery .gallery-container .box img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.gallery .gallery-container .box .icon {
+    display: none;
+    align-items: center;
+    justify-content: center;
+    position:absolute;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    height: 100%;
+    width: 100%;
+    background: var(--dark-bg);
+}
+
+.gallery .gallery-container .box .icon i {
+    font-size: 6rem;
+    color: var(--white);
+
+}
+
+.gallery .gallery-container .box:hover .icon {
+    display: flex;
+}
 
 
+.menu {
+    background-color: var(--light-bg);
+}
+
+.menu .slide .title {
+    padding: 1rem;
+    font-size: 3rem;
+    color: var(--white);
+    background: var(--primary);
+    margin-bottom: 3rem;
+    text-align: center;
+}
+
+.menu .slide .box-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+    padding-bottom: 4rem;
+}
+
+.menu .slide .box-container .box {
+    flex-direction: 1 1 41rem;
+    background: var(--white);
+    padding: 2rem;
+    box-shadow: var(--box-shadow);
+    border: var(--border);
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    justify-content: space-between;
+}
+
+.menu .slide .box-container .box h3 {
+    font-size: 2.5rem;
+    color: var(--black);
+    padding-bottom: 1rem;
+}
+
+.menu .slide .box-container .box p {
+    font-size: 1.6rem;
+    color: var(--light-black);
+    line-height: 2;
+}
+
+.menu .slide .box-container .box .price {
+    font-size: 2.5rem;
+    color: var(--primary);
+}
+
+.menu .slide .box-container .box:hover {
+    transform: scale(.9);
+}
+
+.order {
+    background: var(--primary);
+}
+
+.order .heading span {
+    color: var(--white);
+}
+
+.order .heading h3 {
+    color: var(--white);
+}
+
+.order form {
+    padding: 2rem;
+    background: var(--white);
+    box-shadow: var(--box-shadow);
+}
+
+.order form .box-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+}
+
+.order form .box-container .box {
+    flex: 1 1 41rem;
+}
+
+.order form .box-container .box .inputBox input,
+.order form .box-container .box .inputBox textarea {
+    width: 100%;
+    margin: 1rem 0;
+    padding: 1.2rem 1.4rem;
+    font-size: 1.7rem;
+    color: var(--light-black);
+    border: var(--border);
+    text-transform: none;
+}
+
+.order form .box-container .box .inputBox input::placeholder,
+.order form .box-container .box .inputBox textarea::placeholder{
+    text-transform: capitalize;
+}
+
+.order form .box-container .box .inputBox input:focus,
+.order form .box-container .box .inputBox textarea:focus{
+    background: var(--black);
+    color: var(--white);
+}
+
+.order form .box-container .box .inputBox textarea {
+    height: 20rem;
+    resize: none;
+}
+
+.order form .box-container .box .inputBox .map {
+    height: 20rem;
+    width: 100%;
+    margin: 1rem 0;
+    padding: .5rem 0;
+}
+
+.order form .box-container .box .inputBox span {
+    color: var(--light-black);
+    font-size: 2rem;
+}
+
+.blogs {
+    background: var(--light-bg);
+}
+
+.blogs .slide .image {
+    height: 25rem;
+    overflow: hidden;
+    position: relative;
+}
+
+.blogs .slide .image img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.blogs .slide .image span {
+    position: absolute;
+    bottom: -10rem;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: .5rem 1.5rem;
+    font-size: 2rem;
+    color: var(--white);
+    background: var(--black);
+}
+
+.blogs .slide:hover .image span {
+    bottom: 1rem;
+}
+
+.blogs .slide:hover .image img {
+    transform: scale(1.1);
+}
+
+.blogs .slide .content {
+    padding: 2rem;
+    background: var(--white);
+    box-shadow: var(--box-shadow);
+    border: var(--border);
+    margin-bottom: 4rem;
+}
+
+.blogs .slide .content .icon {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 2rem;
+}
+
+.blogs .slide .content .icon a {
+    font-size: 1.5rem;
+    color: var(--light-black);
+}
+
+.blogs .slide .content .icon a i {
+    padding-right: .7rem;
+    color: var(--primary);
+}
+
+.blogs .slide .content .icon a:hover {
+    color: var(--primary);
+}
+
+.blogs .slide .content .title {
+    font-size: 2.5rem;
+    color: var(--black);
+}
+
+.blogs .slide .content .title:hover {
+    font-size: 2.5rem;
+    color: var(--black);
+}
+
+.blogs .slide .content p {
+    padding: 1rem 0;
+    line-height: 2;
+    font-size: 1.6rem;
+    color: var(--light-black);
+}
+
+.footer {
+    text-align: center;
+}
+
+.footer .icons-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+    gap: 2rem;
+}
+
+.footer .icons-container .icons {
+    text-align: center;
+    padding: 3rem 2rem;
+}
+
+.footer .icons-container .icons i {
+    height: 6rem;
+    width: 6rem;
+    border-radius: 50%;
+    background: var(--primary);
+    color: var(--white);
+    margin-bottom: .5rem;
+    line-height: 5.8rem;
+    font-size: 2rem;
+}
 
 
+.footer .icons-container .icons h3 {
+    font-size: 2rem;
+    color: var(--black);
+    padding: 1rem 0;
+}
+
+.footer .icons-container .icons p {
+    line-height: 1.5;
+    font-size: 1.7rem;
+    color: var(--light-black);
+    text-transform: none;
+}
+
+.footer .share {
+    margin: 2rem 0;
+}
+
+.footer .share a {
+    height: 6rem;
+    width: 6rem;
+    line-height: 5.8rem;
+    color: var(--white);
+    background: var(--black);
+    margin: 0 .3rem;
+    font-size: 2.5rem;
+}
+
+.footer .share a:hover {
+    background: var(--primary);
+}
+
+.footer .credit {
+    padding-top: 2rem;
+    margin-top: 3rem;
+    border-top: var(--border);
+    font-size: 2rem;
+    color: var(--light-black);
+}
+
+.footer .credit span {
+    color: var(--primary);
+}
 
 
 
@@ -441,6 +750,10 @@ section {
  .swiper-button-prev {
     top: initial;
     bottom: 1rem;
+ }
+ .menu .slide .box-container .box {
+    flex-flow: column;
+    text-align: center;
  }
 }
 
